Settings WebUI: show selected avatar on initial load of manage profile

Bug: 710660
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I2a43c8a51c6702d2e79e05b72162133d18f82041
Reviewed-on: https://chromium-review.googlesource.com/949419
Commit-Queue: Esmael El-Moslimany <aee@chromium.org>
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541862}
Former-commit-id: 9541cad0d8922abcddf5cb0e7495fb910d82f4ce