ui/webui/resources/cr_elements/cr_profile_avatar_selector/cr_profile_avatar_selector.js
@@ -10,7 +10,8 @@
 /**
  * @typedef {{url: string,
  *            label: string,
- *            isGaiaAvatar: (boolean|undefined)}}
+ *            isGaiaAvatar: (boolean|undefined),
+ *            selected: (boolean|undefined)}}
  */
 let AvatarIcon;
 
@@ -47,6 +48,13 @@ Polymer({
     },
   },
 
+  /** @private */
+  getSelectedClass_: function(isSelected) {
+    // TODO(dpapad): Rename 'iron-selected' to 'selected' now that this CSS
+    // class is not assigned by any iron-* behavior.
+    return isSelected ? 'iron-selected' : '';
+  },
+
   /**
    * @param {string} iconUrl
    * @return {string} A CSS image-set for multiple scale factors.
@@ -61,13 +69,14 @@ Polymer({
    * @private
    */
   onAvatarTap_: function(e) {
-    // TODO(dpapad): Rename 'iron-selected' to 'selected' now that this CSS
-    // class is not assigned by any iron-* behavior.
+    // Manual selection for profile creation
     if (this.selectedAvatarElement_)
       this.selectedAvatarElement_.classList.remove('iron-selected');
-
     this.selectedAvatarElement_ = /** @type {!HTMLElement} */ (e.target);
     this.selectedAvatarElement_.classList.add('iron-selected');
+
+    // |selectedAvatar| is set to pass back selection to the owner of this
+    // component.
     this.selectedAvatar =
         /** @type {!{model: {item: !AvatarIcon}}} */ (e).model.item;
   },
